--- a/src/stylesheet/vars.css
+++ b/src/stylesheet/vars.css
@@ -2,9 +2,11 @@
   --white-color: #ffffff;
   --black-color: #000;
   --light-green-color: #24cca7;
+  --light-green-hover-color: #24e6bb;
   --grey-color: #bdbdbd;
   --light-grey-color: #e0e0e0;
   --blue-color: #4a56e2;
+  --blue-hover-color: #2834b9;
   --ping-color: #ff6596;
 
   /* category */
